@@ -1,3 +1,7 @@
+2013-04-15  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* Makefile.am [WIN32]: Install runscript.* and ConTeXt wrappers.
+
 2013-02-21  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am [WIN32]: Install arara.exe wrapper.
